--- a/index.html
+++ b/index.html
@@ -141,24 +141,24 @@
                 <!-- Logo and Navigation Items -->
                 <div class="d-flex flex-column align-items-center mx-auto">
 
-                    <!-- Logo -->
+                    <!-- Logo links to home -->
                     <a class="navbar-brand" href="#home">
                         <img src="./assets/img/Uniqlo Logo.png" width="auto" height="80">
                     </a>
-                    
+
                     <!-- Navigation Items-->
                     <ul class="navbar-nav d-flex flex-row mt-3">
                         <li class="nav-item me-4">
                             <a class="nav-link" href="#home">HOME</a>
                         </li>
                         <li class="nav-item me-4">
-                            <a class="nav-link" href="#shop">SHOP</a>
+                            <a class="nav-link" href="./pages/page1/index.html">SHOP</a>
                         </li>
                         <li class="nav-item me-4">
-                            <a class="nav-link" href="#about">ABOUT</a>
+                            <a class="nav-link" href="./pages/page2/index.html">ABOUT</a>
                         </li>
                         <li class="nav-item me-4">
-                            <a class="nav-link" href="#contact">CONTACT</a>
+                            <a class="nav-link" href="./pages/page3/index.html">CONTACT</a>
                         </li>
                     </ul>
                 </div>
