--- a/pages/page1/index.html
+++ b/pages/page1/index.html
@@ -16,6 +16,8 @@
  - tailwind / bootstrap not required but recommended
  - atleast tablet useful -->
 
+        <!-- SHOP/PRODUCTS PAGE -->
+
         <!-- Navigation Bar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
@@ -151,7 +153,7 @@
                             <a class="nav-link" href="../../index.html">HOME</a>
                         </li>
                         <li class="nav-item me-4">
-                            <a class="nav-link" href="#shop">SHOP</a>
+                            <a class="nav-link" href="#">SHOP</a>
                         </li>
                         <li class="nav-item me-4">
                             <a class="nav-link" href="../page2/index.html">ABOUT</a>
@@ -288,7 +290,7 @@
                         <p><strong>Rating:</strong> ★ 4.9</p>
                         <p><strong>Description:</strong> A classic, versatile sleeveless t-shirt made from Supima cotton, offering comfort and style for everyday wear.</p>
                         <!-- Cart Button -->
-                        <button type="button" class="btn btn-primary">Add to Cart</button>
+                        <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Add to Cart</button>
                     </div>
                 </div>
             </div>
@@ -308,7 +310,7 @@
                         <p><strong>Rating:</strong> ★ 5.0</p>
                         <p><strong>Description:</strong> This flowy dress with ruffle sleeves is perfect for a casual day out, offering both comfort and femininity.</p>
                         <!-- Cart Button -->
-                        <button type="button" class="btn btn-primary">Add to Cart</button>
+                        <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Add to Cart</button>
                     </div>
                 </div>
             </div>
@@ -328,7 +330,7 @@
                         <p><strong>Rating:</strong> ★ 4.9</p>
                         <p><strong>Description:</strong> These wide chino pants provide a relaxed fit with a stylish look, perfect for both casual and semi-formal occasions.</p>
                         <!-- Cart Button -->
-                        <button type="button" class="btn btn-primary">Add to Cart</button>
+                        <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Add to Cart</button>
                     </div>
                 </div>
             </div>
@@ -358,7 +360,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <a href="#" data-bs-toggle="modal" data-bs-target="#modalMen2" class="text-decoration-none">
                             <div class="card">
-                                <img src="https://image.uniqlo.com/UQ/ST3/ph/imagesgoods/470641/item/phgoods_38_470641_3x4.jpg?width=294" class="card-img-top" alt="men-sweater">
+                                <img src="https://image.uniqlo.com/UQ/ST3/ph/imagesgoods/470641/item/phgoods_08_470641_3x4.jpg?width=369" class="card-img-top" alt="men-sweater">
                                 <div class="card-body">
                                     <p class="card-text">MEN</p>
                                     <h5 class="card-title">Soft Knitted Fleece Sweater</h5>
@@ -401,7 +403,7 @@
                         <p><strong>Rating:</strong> ★ 4.6</p>
                         <p><strong>Description:</strong> This breathable polo shirt is perfect for hot weather, offering a classic look with a striped design.</p>
                         <!-- Cart Button -->
-                        <button type="button" class="btn btn-primary">Add to Cart</button>
+                        <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Add to Cart</button>
                     </div>
                 </div>
             </div>
@@ -421,7 +423,7 @@
                         <p><strong>Rating:</strong> ★ 5.0</p>
                         <p><strong>Description:</strong> Cozy fleece sweater with a soft texture and a crew neck design for added warmth in cooler months.</p>
                         <!-- Cart Button -->
-                        <button type="button" class="btn btn-primary">Add to Cart</button>
+                        <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Add to Cart</button>
                     </div>
                 </div>
             </div>
@@ -441,7 +443,7 @@
                         <p><strong>Rating:</strong> ★ 5.0</p>
                         <p><strong>Description:</strong> These pleated pants offer a relaxed yet modern look, combining comfort and style for everyday wear.</p>
                         <!-- Cart Button -->
-                        <button type="button" class="btn btn-primary">Add to Cart</button>
+                        <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Add to Cart</button>
                     </div>
                 </div>
             </div>
@@ -514,7 +516,7 @@
                         <p><strong>Rating:</strong> ★ 5.0</p>
                         <p><strong>Description:</strong> Comfortable and breathable AIRism cotton shirt designed for kids, perfect for warmer weather.</p>
                         <!-- Cart Button -->
-                        <button type="button" class="btn btn-primary">Add to Cart</button>
+                        <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Add to Cart</button>
                     </div>
                 </div>
             </div>
@@ -534,7 +536,7 @@
                         <p><strong>Rating:</strong> ★ 5.0</p>
                         <p><strong>Description:</strong> A cute and comfortable camisole dress for girls, ideal for warm days.</p>
                         <!-- Cart Button -->
-                        <button type="button" class="btn btn-primary">Add to Cart</button>
+                        <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Add to Cart</button>
                     </div>
                 </div>
             </div>
@@ -554,7 +556,7 @@
                         <p><strong>Rating:</strong> ★ 4.9</p>
                         <p><strong>Description:</strong> Comfortable denim shorts for kids, perfect for casual outings during the summer.</p>
                         <!-- Cart Button -->
-                        <button type="button" class="btn btn-primary">Add to Cart</button>
+                        <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Add to Cart</button>
                     </div>
                 </div>
             </div>
@@ -627,7 +629,7 @@
                         <p><strong>Rating:</strong> ★ 5.0</p>
                         <p><strong>Description:</strong> Comfortable one-piece outfit for babies with long sleeves, perfect for the colder months.</p>
                         <!-- Cart Button -->
-                        <button type="button" class="btn btn-primary">Add to Cart</button>
+                        <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Add to Cart</button>
                     </div>
                 </div>
             </div>
@@ -647,7 +649,7 @@
                         <p><strong>Rating:</strong> ★ 5.0</p>
                         <p><strong>Description:</strong> Soft and breathable short-sleeve pajamas designed to keep babies comfortable while sleeping.</p>
                         <!-- Cart Button -->
-                        <button type="button" class="btn btn-primary">Add to Cart</button>
+                        <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Add to Cart</button>
                     </div>
                 </div>
             </div>
@@ -667,7 +669,7 @@
                         <p><strong>Rating:</strong> ★ 5.0</p>
                         <p><strong>Description:</strong> A soft, washable full-zip parka for babies, ideal for cooler weather.</p>
                         <!-- Cart Button -->
-                        <button type="button" class="btn btn-primary">Add to Cart</button>
+                        <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Add to Cart</button>
                     </div>
                 </div>
             </div>
