--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
  - tailwind / bootstrap not required but recommended
  - atleast tablet useful -->
 
+        <!-- HOME PAGE -->
+
         <!-- Navigation Bar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
@@ -142,14 +144,14 @@
                 <div class="d-flex flex-column align-items-center mx-auto">
 
                     <!-- Logo links to home -->
-                    <a class="navbar-brand" href="#home">
+                    <a class="navbar-brand" href="#">
                         <img src="./assets/img/Uniqlo Logo.png" width="auto" height="80">
                     </a>
 
                     <!-- Navigation Items-->
                     <ul class="navbar-nav d-flex flex-row mt-3">
                         <li class="nav-item me-4">
-                            <a class="nav-link" href="#home">HOME</a>
+                            <a class="nav-link" href="#">HOME</a>
                         </li>
                         <li class="nav-item me-4">
                             <a class="nav-link" href="./pages/page1/index.html">SHOP</a>
@@ -256,7 +258,7 @@
                             <img src="https://image.uniqlo.com/UQ/ST3/ph/imagesgoods/476249/item/phgoods_09_476249_3x4.jpg?width=294" class="card-img-top" alt="Women Collection">
                             <div class="card-body d-flex flex-column align-items-center">
                                 <h5 class="card-title">WOMEN</h5>
-                                <a href="#" class="btn btn-primary mt-auto">View All</a>
+                                <a href="./pages/page1/index.html" class="btn btn-primary mt-auto">View All</a>
                             </div>
                         </div>
                     </div>
@@ -267,7 +269,7 @@
                             <img src="https://image.uniqlo.com/UQ/ST3/ph/imagesgoods/478977/item/phgoods_43_478977_3x4.jpg?width=294" class="card-img-top" alt="Men Collection">
                             <div class="card-body d-flex flex-column align-items-center">
                                 <h5 class="card-title">MEN</h5>
-                                <a href="#" class="btn btn-primary mt-auto">View All</a>
+                                <a href="./pages/page1/index.html" class="btn btn-primary mt-auto">View All</a>
                             </div>
                         </div>
                     </div>
@@ -278,7 +280,7 @@
                             <img src="https://image.uniqlo.com/UQ/ST3/ph/imagesgoods/473334/item/phgoods_12_473334_3x4.jpg?width=294" class="card-img-top" alt="Kids Collection">
                             <div class="card-body d-flex flex-column align-items-center">
                                 <h5 class="card-title">KIDS</h5>
-                                <a href="#" class="btn btn-primary mt-auto">View All</a>
+                                <a href="./pages/page1/index.html" class="btn btn-primary mt-auto">View All</a>
                             </div>
                         </div>
                     </div>
@@ -289,7 +291,7 @@
                             <img src="https://im.uniqlo.com/global-cms/spa/resc70ccbe12c836673cd813ca1be406269fr.jpg" class="card-img-top" alt="Baby Collection">
                             <div class="card-body d-flex flex-column align-items-center">
                                 <h5 class="card-title">BABIES</h5>
-                                <a href="#" class="btn btn-primary mt-auto">View All</a>
+                                <a href="./pages/page1/index.html" class="btn btn-primary mt-auto">View All</a>
                             </div>
                         </div>
                     </div>
@@ -313,7 +315,7 @@
                 <div class="image-overlay">
                     <img src="https://image.uniqlo.com/UQ/ST3/ph/imagesother/Feature-Pages/UTMain/2024/ut.png" alt="ut-collection-banner">
                 </div>
-                <a href="#" class="view-all-button">View All</a>
+                <a href="./pages/page1/index.html" class="view-all-button">View All</a>
             </div>
         </section>
 
