--- a/pages/page2/index.html
+++ b/pages/page2/index.html
@@ -158,7 +158,7 @@
                             <a class="nav-link" href="#">ABOUT</a>
                         </li>
                         <li class="nav-item me-4">
-                            <a class="nav-link" href="./pages/page3/index.html">CONTACT</a>
+                            <a class="nav-link" href="../page3/index.html">CONTACT</a>
                         </li>
                     </ul>
                 </div>
