--- a/index.html
+++ b/index.html
@@ -10,11 +10,6 @@
         <link rel="stylesheet" href="./assets/css/style.css">
     </head>
     <body>
-<!-- REQUIREMENT:
- - 4 pages: landing page, about page, contact and menu of services/products page
- - min of 3 products and each has their own modal or page
- - tailwind / bootstrap not required but recommended
- - atleast tablet useful -->
 
         <!-- HOME PAGE -->
 
@@ -328,10 +323,10 @@
                     <div class="footer-col">
                         <h4>ABOUT UNIQLO</h4>
                         <ul>
-                            <li><a href="#">Information</a></li>
-                            <li><a href="#">Careers</a></li>
-                            <li><a href="#">Sustainability</a></li>
-                            <li><a href="#">Online Gift Service</a></li>
+                            <li><a href="./pages/page2/index.html">Information</a></li>
+                            <li><a href="./pages/page2/index.html">Careers</a></li>
+                            <li><a href="./pages/page2/index.html">Sustainability</a></li>
+                            <li><a href="./pages/page2/index.html">Online Gift Service</a></li>
                         </ul>
                     </div>
 
@@ -339,10 +334,10 @@
                     <div class="about-col">
                         <h4>HELP</h4>
                         <ul>
-                            <li><a href="#">FAQ</a></li>
-                            <li><a href="#">Return Policy</a></li>
-                            <li><a href="#">Bulk Order</a></li>
-                            <li><a href="#">Accessibility</a></li>
+                            <li><a href="./pages/page2/index.html">FAQ</a></li>
+                            <li><a href="./pages/page2/index.html">Return Policy</a></li>
+                            <li><a href="./pages/page2/index.html">Bulk Order</a></li>
+                            <li><a href="./pages/page2/index.html">Accessibility</a></li>
                         </ul>
                     </div>
 
@@ -350,7 +345,7 @@
                     <div class="account-col">
                         <h4>ACCOUNT</h4>
                         <ul>
-                            <li><a href="#">UNIQLO App</a></li>
+                            <li><a href="./pages/page2/index.html">UNIQLO App</a></li>
                             <li><a href="#">Membership</a></li>
                             <li><a href="#">Profile</a></li>
                             <li><a href="#">Coupons</a></li>
