--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@
                             <a class="nav-link" href="#">HOME</a>
                         </li>
                         <li class="nav-item me-4">
-                            <a class="nav-link" href="./pages/page1/index.html">SHOP</a>
+                            <a class="nav-link" href="./pages/1_products/index.html">SHOP</a>
                         </li>
                         <li class="nav-item me-4">
-                            <a class="nav-link" href="./pages/page2/index.html">ABOUT</a>
+                            <a class="nav-link" href="./pages/2_about/index.html">ABOUT</a>
                         </li>
                         <li class="nav-item me-4">
-                            <a class="nav-link" href="./pages/page3/index.html">CONTACT</a>
+                            <a class="nav-link" href="./pages/3_contacts/index.html">CONTACT</a>
                         </li>
                     </ul>
                 </div>
@@ -364,7 +364,7 @@
                 <div class="image-overlay">
                     <img src="https://image.uniqlo.com/UQ/ST3/ph/imagesother/Feature-Pages/UTMain/2024/ut.png" alt="ut-collection-banner">
                 </div>
-                <a href="./pages/page1/index.html" class="view-all-button">View All</a>
+                <a href="./pages/1_products/index.html" class="view-all-button">View All</a>
             </div>
         </section>
 
@@ -377,10 +377,10 @@
                     <div class="footer-col">
                         <h4>ABOUT UNIQLO</h4>
                         <ul>
-                            <li><a href="./pages/page2/index.html">Information</a></li>
-                            <li><a href="./pages/page2/index.html">Careers</a></li>
-                            <li><a href="./pages/page2/index.html">Sustainability</a></li>
-                            <li><a href="./pages/page2/index.html">Online Gift Service</a></li>
+                            <li><a href="./pages/2_about/index.html">Information</a></li>
+                            <li><a href="./pages/2_about/index.html">Careers</a></li>
+                            <li><a href="./pages/2_about/index.html">Sustainability</a></li>
+                            <li><a href="./pages/2_about/index.html">Online Gift Service</a></li>
                         </ul>
                     </div>
 
@@ -388,10 +388,10 @@
                     <div class="about-col">
                         <h4>HELP</h4>
                         <ul>
-                            <li><a href="./pages/page2/index.html">FAQ</a></li>
-                            <li><a href="./pages/page2/index.html">Return Policy</a></li>
-                            <li><a href="./pages/page2/index.html">Bulk Order</a></li>
-                            <li><a href="./pages/page2/index.html">Accessibility</a></li>
+                            <li><a href="./pages/2_about/index.html">FAQ</a></li>
+                            <li><a href="./pages/2_about/index.html">Return Policy</a></li>
+                            <li><a href="./pages/2_about/index.html">Bulk Order</a></li>
+                            <li><a href="./pages/2_about/index.html">Accessibility</a></li>
                         </ul>
                     </div>
 
@@ -399,7 +399,7 @@
                     <div class="account-col">
                         <h4>ACCOUNT</h4>
                         <ul>
-                            <li><a href="./pages/page2/index.html">UNIQLO App</a></li>
+                            <li><a href="./pages/2_about/index.html">UNIQLO App</a></li>
                             <li><a href="#" data-bs-toggle="modal" data-bs-target="#userModal">Membership</a></li>
                             <li><a href="#" data-bs-toggle="modal" data-bs-target="#userModal">Profile</a></li>
                             <li><a href="#" data-bs-toggle="modal" data-bs-target="#userModal">Coupons</a></li>
