--- a/pages/1_products/index.html
+++ b/pages/1_products/index.html
@@ -151,10 +151,10 @@
                             <a class="nav-link" href="#">SHOP</a>
                         </li>
                         <li class="nav-item me-4">
-                            <a class="nav-link" href="../page2/index.html">ABOUT</a>
+                            <a class="nav-link" href="./pages/2_about/index.html">ABOUT</a>
                         </li>
                         <li class="nav-item me-4">
-                            <a class="nav-link" href="../page3/index.html">CONTACT</a>
+                            <a class="nav-link" href="../3_contacts/index.html">CONTACT</a>
                         </li>
                     </ul>
                 </div>
@@ -733,10 +733,10 @@
                     <div class="footer-col">
                         <h4>ABOUT UNIQLO</h4>
                         <ul>
-                            <li><a href="../page2/index.html">Information</a></li>
-                            <li><a href="../page2/index.html">Careers</a></li>
-                            <li><a href="../page2/index.html">Sustainability</a></li>
-                            <li><a href="../page2/index.html">Online Gift Service</a></li>
+                            <li><a href="../2_about/index.html">Information</a></li>
+                            <li><a href="../2_about/index.html">Careers</a></li>
+                            <li><a href="../2_about/index.html">Sustainability</a></li>
+                            <li><a href="../2_about/index.html">Online Gift Service</a></li>
                         </ul>
                     </div>
 
@@ -744,10 +744,10 @@
                     <div class="about-col">
                         <h4>HELP</h4>
                         <ul>
-                            <li><a href="../page2/index.html">FAQ</a></li>
-                            <li><a href="../page2/index.html">Return Policy</a></li>
-                            <li><a href="../page2/index.html">Bulk Order</a></li>
-                            <li><a href="../page2/index.html">Accessibility</a></li>
+                            <li><a href="../2_about/index.html">FAQ</a></li>
+                            <li><a href="../2_about/index.html">Return Policy</a></li>
+                            <li><a href="../2_about/index.html">Bulk Order</a></li>
+                            <li><a href="../2_about/index.html">Accessibility</a></li>
                         </ul>
                     </div>
 
@@ -755,7 +755,7 @@
                     <div class="account-col">
                         <h4>ACCOUNT</h4>
                         <ul>
-                            <li><a href="../page2/index.html">UNIQLO App</a></li>
+                            <li><a href="../2_about/index.html">UNIQLO App</a></li>
                             <li><a href="#" data-bs-toggle="modal" data-bs-target="#userModal">Membership</a></li>
                             <li><a href="#" data-bs-toggle="modal" data-bs-target="#userModal">Profile</a></li>
                             <li><a href="#" data-bs-toggle="modal" data-bs-target="#userModal">Coupons</a></li>
