--- a/pages/2_about/index.html
+++ b/pages/2_about/index.html
@@ -149,13 +149,13 @@
                             <a class="nav-link" href="../../index.html">HOME</a>
                         </li>
                         <li class="nav-item me-4">
-                            <a class="nav-link" href="../../pages/page1/index.html">SHOP</a>
+                            <a class="nav-link" href="../../pages/1_products/index.html">SHOP</a>
                         </li>
                         <li class="nav-item me-4">
                             <a class="nav-link" href="#">ABOUT</a>
                         </li>
                         <li class="nav-item me-4">
-                            <a class="nav-link" href="../page3/index.html">CONTACT</a>
+                            <a class="nav-link" href="../3_contacts/index.html">CONTACT</a>
                         </li>
                     </ul>
                 </div>
