--- a/pages/3_contacts/index.html
+++ b/pages/3_contacts/index.html
@@ -148,10 +148,10 @@
                             <a class="nav-link" href="../../index.html">HOME</a>
                         </li>
                         <li class="nav-item me-4">
-                            <a class="nav-link" href="../../pages/page1/index.html">SHOP</a>
+                            <a class="nav-link" href="../../pages/1_products/index.html">SHOP</a>
                         </li>
                         <li class="nav-item me-4">
-                            <a class="nav-link" href="../../pages/page2/index.html">ABOUT</a>
+                            <a class="nav-link" href="../../pages/2_about/index.html">ABOUT</a>
                         </li>
                         <li class="nav-item me-4">
                             <a class="nav-link" href="#">CONTACT</a>
@@ -285,10 +285,10 @@
                     <div class="footer-col">
                         <h4>ABOUT UNIQLO</h4>
                         <ul>
-                            <li><a href="../page2/index.html">Information</a></li>
-                            <li><a href="../page2/index.html">Careers</a></li>
-                            <li><a href="../page2/index.html">Sustainability</a></li>
-                            <li><a href="../page2/index.html">Online Gift Service</a></li>
+                            <li><a href="../2_about/index.html">Information</a></li>
+                            <li><a href="../2_about/index.html">Careers</a></li>
+                            <li><a href="../2_about/index.html">Sustainability</a></li>
+                            <li><a href="../2_about/index.html">Online Gift Service</a></li>
                         </ul>
                     </div>
 
@@ -296,10 +296,10 @@
                     <div class="about-col">
                         <h4>HELP</h4>
                         <ul>
-                            <li><a href="../page2/index.html">FAQ</a></li>
-                            <li><a href="../page2/index.html">Return Policy</a></li>
-                            <li><a href="../page2/index.html">Bulk Order</a></li>
-                            <li><a href="../page2/index.html">Accessibility</a></li>
+                            <li><a href="../2_about/index.html">FAQ</a></li>
+                            <li><a href="../2_about/index.html">Return Policy</a></li>
+                            <li><a href="../2_about/index.html">Bulk Order</a></li>
+                            <li><a href="../2_about/index.html">Accessibility</a></li>
                         </ul>
                     </div>
 
@@ -307,7 +307,7 @@
                     <div class="account-col">
                         <h4>ACCOUNT</h4>
                         <ul>
-                            <li><a href="../page2/index.html">UNIQLO App</a></li>
+                            <li><a href="../2_about/index.html">UNIQLO App</a></li>
                             <li><a href="#" data-bs-toggle="modal" data-bs-target="#userModal">Membership</a></li>
                             <li><a href="#" data-bs-toggle="modal" data-bs-target="#userModal">Profile</a></li>
                             <li><a href="#" data-bs-toggle="modal" data-bs-target="#userModal">Coupons</a></li>
