--- a/pages/2_about/index.html
+++ b/pages/2_about/index.html
@@ -139,7 +139,7 @@
                 <div class="d-flex flex-column align-items-center mx-auto">
 
                     <!-- Logo links to home -->
-                    <a class="navbar-brand" href="./index.html">
+                    <a class="navbar-brand" href="../../index.html">
                         <img src="./assets/img/Uniqlo Logo.png" width="auto" height="80">
                     </a>
 
