--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                             <img src="https://image.uniqlo.com/UQ/ST3/ph/imagesgoods/476249/item/phgoods_09_476249_3x4.jpg?width=294" class="card-img-top" alt="Women Collection">
                             <div class="card-body d-flex flex-column align-items-center">
                                 <h5 class="card-title">WOMEN</h5>
-                                <a href="./pages/page1/index.html" class="btn btn-primary mt-auto">View All</a>
+                                <a href="./pages/1_products/index.html" class="btn btn-primary mt-auto">View All</a>
                             </div>
                         </div>
                     </div>
@@ -318,7 +318,7 @@
                             <img src="https://image.uniqlo.com/UQ/ST3/ph/imagesgoods/478977/item/phgoods_43_478977_3x4.jpg?width=294" class="card-img-top" alt="Men Collection">
                             <div class="card-body d-flex flex-column align-items-center">
                                 <h5 class="card-title">MEN</h5>
-                                <a href="./pages/page1/index.html" class="btn btn-primary mt-auto">View All</a>
+                                <a href="./pages/1_products/index.html" class="btn btn-primary mt-auto">View All</a>
                             </div>
                         </div>
                     </div>
@@ -329,7 +329,7 @@
                             <img src="https://image.uniqlo.com/UQ/ST3/ph/imagesgoods/473334/item/phgoods_12_473334_3x4.jpg?width=294" class="card-img-top" alt="Kids Collection">
                             <div class="card-body d-flex flex-column align-items-center">
                                 <h5 class="card-title">KIDS</h5>
-                                <a href="./pages/page1/index.html" class="btn btn-primary mt-auto">View All</a>
+                                <a href="./pages/1_products/index.html" class="btn btn-primary mt-auto">View All</a>
                             </div>
                         </div>
                     </div>
@@ -340,7 +340,7 @@
                             <img src="https://im.uniqlo.com/global-cms/spa/resc70ccbe12c836673cd813ca1be406269fr.jpg" class="card-img-top" alt="Baby Collection">
                             <div class="card-body d-flex flex-column align-items-center">
                                 <h5 class="card-title">BABIES</h5>
-                                <a href="./pages/page1/index.html" class="btn btn-primary mt-auto">View All</a>
+                                <a href="./pages/1_products/index.html" class="btn btn-primary mt-auto">View All</a>
                             </div>
                         </div>
                     </div>
