--- a/pages/1_products/index.html
+++ b/pages/1_products/index.html
@@ -151,7 +151,7 @@
                             <a class="nav-link" href="#">SHOP</a>
                         </li>
                         <li class="nav-item me-4">
-                            <a class="nav-link" href="../../pages/2_about/index.html">ABOUT</a>
+                            <a class="nav-link" href="../2_about/index.html">ABOUT</a>
                         </li>
                         <li class="nav-item me-4">
                             <a class="nav-link" href="../3_contacts/index.html">CONTACT</a>
