--- a/pages/2_about/index.html
+++ b/pages/2_about/index.html
@@ -435,10 +435,10 @@
                   <img src="https://im.uniqlo.com/global-cms/spa/res812ef78ac51a33e810ec171b65dbc446fr.jpg">
                   <div class="d-flex gap-3">
                     <!-- Google PlayStore and Apple Store -->
-                    <a href="https://play.google.com/store/search?q=uniqlo&c=apps" target="_blank">
+                    <a href="#" target="_blank">
                       <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" alt="Download on Google Play" style="height: 60px;">
                     </a>
-                    <a href="https://apps.apple.com/ph/app/uniqlo-ph/id867580595" target="_blank">
+                    <a href="#" target="_blank">
                       <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" alt="Download on the App Store" style="height: 60px;">
                     </a>
                   </div>
