--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
         <!-- Carousel -->
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-
+            <div class="carousel-inner" data-bs-interval="3000">
             <!-- Carousel Items -->
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -283,6 +283,7 @@
                 </div>
               </div>
             </div>
+        </div>
 
             <!-- Carousel Button -->
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
